Update HotelBookingService to set hotel status as booked upon reservation and refactor total amount calculation in FlightBookingService